# cff-author-updater

./: CITATION.cff  README.md  action.yml  main.py  pyproject.toml  update_cff_authors.py  utils.py
.github/workflows/: pr-author-check.yml  review-cff-authors-pr.yml
managers/: cff_manager.py  github_manager.py  orcid_manager.py
src/: cff_file.py  flags.py  main.py
src/cff_author_updater/: cff_author_review.py  cff_file.py  flags.py  log_identifiers.py  logging_config.py  main.py  ordered_yaml_loader.py
src/cff_author_updater/contributions/: contribution.py  github_pull_request_comment_contribution.py  github_pull_request_commit_contribution.py  github_pull_request_issue_comment_contribution.py  github_pull_request_issue_contribution.py  github_pull_request_review_contribution.py  unknown_contribution.py
src/cff_author_updater/contributors/: cff_author_contributor.py  contributor.py  git_commit_contributor.py  github_contributor.py  github_user_contributor.py
src/cff_author_updater/managers/: cff_manager.py  contribution_manager.py  github_manager.py  github_pull_request_manager.py  orcid_manager.py
src/contributors/: git_commit_contributor.py  github_user_contributor.py
src/managers/: cff_manager.py  github_manager.py
tests/: test_orcid_manager.py  test_utils.py
tests/contributors/: test_cff_author_contributor.py  test_contributor.py
